# medusa-vision

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
medusa/: __init__.py
medusa/config/: __init__.py
medusa/detection/: __init__.py  age.py  emotion.py  face.py  gender.py
medusa/embedding/: __init__.py
medusa/exception/: MetricNotSupportedError.py  ModelNotSupportedError.py  MoreThanOneFaceError.py  UnsupportedFormatError.py  __init__.py
medusa/model/: __init__.py  age_detection.py  cnn.py  emotion_detection.py  face_embedding.py  gender_detection.py  vgg16_face.py
medusa/model/util/: distance.py  find_file.py  image_show.py  postprocessor.py  preprocessor.py
medusa/test/: __init__.py  _webcam_test.py  webcam_test.py
medusa/vision/: __init__.py  age.py  emotion.py  face.py  gender.py  recognize.py
medusa_resources/: __init__.py
medusa_resources/exception/: ResourceDownloadError.py  RollbackError.py  __init__.py
medusa_resources/storage/: __init__.py  storage_manager.py
medusa_resources/util/: __init__.py  find_file.py  logger.py
