[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medusa-vision"
version = "0.1.0"
authors = [
  { name="vortezwohl", email="2310108909@qq.com" },
]
description = "Emotion and gender recognition."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'opencv-python==4.10.0.84',
    'keras==3.4.1',
    'numpy==1.26.4'
]
license = {file = 'LICENSE'}

[project.urls]
Homepage = "https://github.com/pypa/medusa-vision"
Issues = "https://github.com/pypa/medusa-vision/issues"